# wordle-solver-haskell

./: .gitignore  WordleSolver.cabal  build_hs.sh  out.txt  wordle_solver.R
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: wordle_guesser.hs  wordle_solver.R  wordle_solver.hs
src/App/: Funcs.hs  ScoreTable.hs  Wordle.hs
webapp/: app.R
