cabal-version:      2.4
name:               WordleSolver
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             landseal
maintainer:         kenndesilva1@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable WordleSolver
    main-is:          wordle_solver.hs

    -- Modules included in this executable, other than Main.
    other-modules:    App.Wordle, App.ScoreTable

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.12.0.0
    ghc-options:      -Wall -O2 -threaded
    hs-source-dirs:   src
    default-language: Haskell2010